--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Жопа ТВ</title>
+    <title>Жопа ТВ Онлайн</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Тут ничего нет...</h1>
+        <h1>Жопа ТВ Онлайн</h1>
+        <div class="schedule" id="schedule">
+            <h2>Расписание</h2>
+            <ul id="schedule-list"></ul>
+        </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
